# habl

./: .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
habl/: pyproject.toml
habl/src/: manage.py
habl/src/habl/: asgi.py  settings.py  urls.py  wsgi.py
notes/: effects.md
rewardme/: package.json
src/: manage.py
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_profile.py  0003_remove_profile_email.py  0004_remove_profile_first_name_remove_profile_last_name.py
src/habl/: asgi.py  base_settings.py  settings.py  urls.py  wsgi.py
src/templates/: home.html
src/tests/: test_profile.py  test_users.py
src/tests/project/: settings.py
